Fix canvas and overlay height on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -3,13 +3,20 @@
   padding: 0;
 }
 
-html { font-size: 62.5%; }
+html {
+  font-size: 62.5%;
+  height: 100%;
+}
+
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   color: #222;
   line-height: 1.7;
   letter-spacing: 0.03rem;
+  display: flex;
+  height: 100%;
+  min-height: 100%;
 }
 
 a { color: #111; }
@@ -22,18 +29,19 @@ small { margin: 0 0.2rem; }
 strong { margin: 0 0.2rem; }
 
 canvas {
+  flex: 1;
   cursor: move;
   display: block;
   width: 100vw;
-  height: 100vh;
 }
 
 #overlay {
+  flex: 1;
   position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 1;
 
   background-color: rgba(255, 255, 255, 0.6666);
